--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,20 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log In</title>
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/signup.css">
+    <link rel="stylesheet" href="/login.css">
 </head>
 <body>
-    <div>login</div>
-    <form action="/log-in" method="post">
-        <div class="inputContainer">
-            <label for="username">Username: </label>
-            <input type="text" id="username" name="username">
-        </div>
-        <div class="inputContainer">
-            <label for="password">Password: </label>
-            <input type="password" id="password" name="password">
-        </div>
-        <button class="submitBtn">LogIn</button>
-    </form>
+    <div class="container">
+        <form action="/log-in" method="post">
+            <div class="welcomeHeader">
+                <h1>Welcome to File Uploader, </br> Log In to Continue. </h1>
+                <p>Don't have an account? <a href="/sign-up">Create Account</a></p>
+            </div>
+            <div class="inputs">
+                <div class="inputContainer">
+                    <label for="username">Username: </label>
+                    <input type="text" id="username" name="username">
+                </div>
+                <div class="inputContainer">
+                    <label for="password">Password: </label>
+                    <div class="passwordInput">
+                        <input type="password" id="password" name="password">
+                        <div class="showPassword pass"></div>
+                    </div>
+                </div>
+            </div>
+            <button class="submitBtn">Log In</button>
+        </form>
+        <div class="sideImage"></div>
+    </div>
+
+    <script>
+        const btn = document.querySelector('.pass');
+        const password = document.querySelector('#password');
+
+        btn.addEventListener("click", (e) => {
+            if(!btn.classList.contains("show")){
+                password.type = 'text';
+                btn.classList.add("show");
+            }else {
+                password.type = 'password';
+                btn.classList.remove("show");
+            }
+        });
+    </script>
 </body>
 </html>
