--- a/public/home.css
+++ b/public/home.css
@@ -2,87 +2,62 @@
     margin: 0;
     padding: 0 !important;
     display: grid !important;
-    grid-template-rows: 90px 1fr;
     grid-template-columns: 400px 1fr;
 }
 
-.navbar{
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-    padding: 0 20px;
-    width: 100%;
-    height: 90px;
-    border-bottom: 1px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-h1{
-    font-weight: 400;
-}
-
-.navbarlink{
-    width: 200px;
-    height: 45px;
-    color: #222;
-    font-size: 1.2rem;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #222;
-    transition: .2s all ease-in-out;
-    position: relative;
-}
-
-.navbarlink:hover{
-    background-color: #222;
-    color: white;
-}
-
-.left-side{
-    display: flex;
-    gap: 30px;
+body{
+    background-color: #0D121E !important;
 }
 
 .left-container{
-    border-right: 1px solid #222;
-    background-color: #eeeeee6e;
+    background-color: #1F2430;
+    display: flex;
+    color: #949AA1;
+    flex-direction: column;
+    gap: 10px;
+    padding: 25px;
+    align-items: center;
 }
 
 .right-container{
-    border-right: 1px solid black;
-    background-color: white;
+    background-color: #0D121E;
+    padding: 20px;
 }
 
 .infoContainer{
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    height: 50px;
+    grid-template-columns: 2fr 1fr 1fr 0.5fr;
+    background-color: #181A25;
+    height: 35px;
     align-items: center;
-    padding: 10px;
+    border-radius: 10px;
+}
+
+.info div{
+    width: 65px;
+}
+
+.info span{
+    width: 5px;
 }
 
 .info{
-    padding: 5px;
-    color: #222;
+    display: flex;
+    color: #5D606B;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: .9rem;
+    font-weight: 500;
     transition: .2s all ease-in-out;
 }
 
-.info:hover{
-    background-color: #cbcbcbbb;
-}
-
-.folderForm{
-    background-color: rgba(185, 185, 185, 0.1);
+.folderForm, .fileForm{
+    background-color: #1F2430;
     width: 300px;
     padding: 20px;
     height: 200px;
     position: absolute;
     top: 50%;
+    border-radius: 10px;
     left: 50%;
     transform:translate(-50%, -50%);
     display: flex;
@@ -100,12 +75,30 @@ h1{
     background-color: white;
     padding: 20px;
     transition: .2s;
+    border-radius: 10px;
     font-size: 1rem;
 }
 
+
+.Img{
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+}
+
+.plus{
+    background-image: url('/plus.png');
+}
+
+.upload{
+    height: 30px;
+    width: 30px;
+    background-image: url('/upload.png');
+}
+
 input:focus{
-    border: 1px solid black;
     background-color: transparent;
+    border: 2px solid rgb(0, 0, 0, 0.6)
 }
 
 .submit{
@@ -114,8 +107,9 @@ input:focus{
     align-items: center;
     justify-content: center;
     height: 40px;
-    background-color: #222222;
+    background-color: #00C2FE;
     border: none;
+    border-radius: 10px;
     overflow: hidden;
     color: white;
     cursor: pointer;
@@ -136,4 +130,181 @@ input:focus{
 
 .hide{
     display: none;
+}
+
+.content{
+    display: grid;
+    padding: 10px;
+    gap: 5px;
+}
+
+.fContainer{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 0.5fr;
+    align-items: center;
+}
+
+.line{
+    width: 100%;
+    height: 1px;
+    background-color: #181A25;
+}
+
+.contentChild{
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    gap: 10px;
+    color: #999EA0;
+    font-weight: 400;
+}
+
+.subFolderName{
+    color: white;
+    font-size: 1.2rem;
+}
+
+.folderImg, .fileImg, .allFoldersImg{
+    background-image: url('/folder.png');
+    background-size: 60%;
+    background-color: #1F2430;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+}
+
+.fileImg{
+    background-image: url('/docs.png') !important;
+}
+
+.button{
+    cursor: pointer;
+    width: 300px;
+    height: 100px;
+    border-radius: 10px;
+    border: 2px solid #1F2430;
+    font-size: 1.2rem;
+    color: white;
+    background-color: transparent;
+    font-weight: 500;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+    justify-content: center;
+    transition: .2s ease-in-out;
+    padding: 15px;
+}
+
+.button:hover{
+    background-color: #181A25;
+}
+
+.Doc{
+    align-self: flex-start;
+    width: 35px;
+    height: 35px;
+    background-size: 100%;
+    background-image: url("/google-docs.png");
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+
+.buttonName{
+    font-size: 1rem;
+    text-align: start;
+    grid-row: 2 / 2;
+    grid-column: 1 / 2;
+}
+
+.profile{
+    display: flex;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50px 2fr 1fr;
+    grid-template-rows: 30px 30px;
+    gap: 0px 20px;    
+}
+
+.pfp{
+    grid-column: 1;
+    border-radius: 10px;
+}
+
+.username, .email{
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 5px;
+}
+
+.username{
+    grid-column: 2 / 3;
+    color: white;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+.email{
+    font-weight: 400;
+    grid-column: 2 / 3;
+    grid-row: 2 / 2;
+}
+
+.logoutLink{
+    grid-column: 3 / 3;
+    grid-row: 1 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logoutImg{
+    background-image: url('/logout.png');
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+}
+
+.allFolders{
+    width: 100%;
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: 500;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .2s ease-in-out;
+}
+
+.allFolders:hover{
+    background-color: #353B44;
+    color: white;
+}
+
+.projects{
+    width: 100%;
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding-left: 60px;
+    color: #999EA0;
+}
+
+.allFoldersImg{
+    background-image: url("/allProjects.png");
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    background-size: 100%;
+}
+
+.btnContainer{
+  display: flex;
+  gap: 20px;
 }
