--- a/public/home.css
+++ b/public/home.css
@@ -22,6 +22,9 @@ body{
 .right-container{
     background-color: #0D121E;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .infoContainer{
@@ -87,7 +90,16 @@ body{
 }
 
 .plus{
+    width: 15px;
+    height: 15px;
+    align-self: flex-start;
+    justify-self: flex-end;
     background-image: url('/plus.png');
+    filter: invert(15%) sepia(19%) saturate(592%) hue-rotate(181deg) brightness(94%) contrast(88%);    
+}
+
+.Folder{
+    background-image: url("/folder-folder.png") !important;
 }
 
 .upload{
@@ -133,7 +145,8 @@ input:focus{
 }
 
 .content{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     padding: 10px;
     gap: 5px;
 }
@@ -178,13 +191,26 @@ input:focus{
     padding: 5px;
 }
 
+.downloadBtn{
+    width: 40px;
+    height: 40px;
+    background-image: url('/downloads.png');
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
 .fileImg{
     background-image: url('/docs.png') !important;
 }
 
 .button{
     cursor: pointer;
-    width: 300px;
+    width: 250px;
     height: 100px;
     border-radius: 10px;
     border: 2px solid #1F2430;
