--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
         <div class="right-container">
             <div class="btnContainer">
                 <button class="addFile button"><div class="Img plus"></div><div class="Img Doc"></div><div class="buttonName">New Document</div></button>
-                <button class="addFolder button"><div class="Img plus"></div><div>New Document</div></button>
+                <button class="addFolder button"><div class="Img plus"></div><div class="Img Folder Doc"></div><div class="buttonName">New Folder</div></button>
             </div>
             <div class="infoContainer">
                 <a href="" class="info"><div></div>File name</a>
@@ -53,7 +53,7 @@
                             <% const formattedDate = file.createdOn.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: 'numeric' });  %>
                             <div class="subFolderDate contentChild"><%= formattedDate %></div>
                             <form action="download/<%=file.id %>" method="post">
-                                <button type="submit">Download</button>
+                                <button type="submit" class="downloadBtn"></button>
                             </form>
                         </div>
                         <div class="line"></div>
