--- a/public/home.css
+++ b/public/home.css
@@ -54,10 +54,9 @@ body{
 }
 
 .folderForm, .fileForm{
-    background-color: #1F2430;
-    width: 300px;
+    background-color: #181A25;
+    width: 400px;
     padding: 20px;
-    height: 200px;
     position: absolute;
     top: 50%;
     border-radius: 10px;
@@ -164,6 +163,13 @@ input:focus{
     background-color: #181A25;
 }
 
+.line2{
+    width: 95%;
+    height: 1px;
+    background-color: #999EA0;
+    opacity: 0.4;
+}
+
 .contentChild{
     padding: 5px;
     display: flex;
@@ -191,17 +197,58 @@ input:focus{
     padding: 5px;
 }
 
+.downloadOptions{
+    display: none;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0%;
+    }
+    to{
+        opacity: 100%;
+    }
+}
+
+.downloadClass{
+    width: 100%;
+    height: 50%;
+    transition: .2s;
+    border-radius: 10px;
+}
+
+.downloadClass:hover{
+    background-color: #242933;
+}
+
 .downloadBtn{
-    width: 40px;
-    height: 40px;
+    display: flex;
+    color: #999EA0;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+    border-radius: 10px;
+    font-weight: 600;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.downloadImg, .deleteImg{
+    height: 30px;
+    width: 30px;
     background-image: url('/downloads.png');
     background-size: 60%;
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    cursor: pointer;
+    filter: invert(65%) sepia(4%) saturate(343%) hue-rotate(179deg) brightness(90%) contrast(87%);
+}
+
+.deleteImg{
+    background-image: url('/delete.png');
 }
 
 .fileImg{
@@ -333,4 +380,65 @@ input:focus{
 .btnContainer{
   display: flex;
   gap: 20px;
+}
+
+.threeDots {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    cursor: pointer;
+    width: 28px;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    transition: background-color 0.2s ease;
+}
+
+.threeDots:hover,
+.threeDots:active {
+    background-color: #242933;
+}
+
+.threeDots::before,
+.threeDots::after,
+.threeDots span {
+    content: '';
+    width: 4px;
+    height: 4px;
+    background-color: #666971;
+    border-radius: 50%;
+}
+
+.showOptions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    animation: fadeIn .1s ease-in-out;
+    height: auto;
+    padding: 5px;
+    right: 30px;
+    gap: 5px;
+    border-radius: 10px;
+    background-color: #181A25;
+    position: absolute;
+}
+
+#file{
+    display: none;
+}
+
+.fileLabel{
+    width: 100%;
+    height: 300px;
+    background-color: transparent;
+    border: 1px dashed white;
+    border-radius: 10px;
+}
+
+.upperPart{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
