--- a/public/home.css
+++ b/public/home.css
@@ -54,7 +54,7 @@ body{
 }
 
 .folderForm, .fileForm{
-    background-color: #181A25;
+    background-color: #1F2430;
     width: 400px;
     padding: 20px;
     position: absolute;
@@ -72,9 +72,10 @@ body{
 .folderForm input{
     height: 40px;
     width: 100%;
-    border: none;
+    border: 2px solid transparent;
+    color: white;
     outline: none;
-    background-color: white;
+    background-color: #0D121E;
     padding: 20px;
     transition: .2s;
     border-radius: 10px;
@@ -109,34 +110,7 @@ body{
 
 input:focus{
     background-color: transparent;
-    border: 2px solid rgb(0, 0, 0, 0.6)
-}
-
-.submit{
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    background-color: #00C2FE;
-    border: none;
-    border-radius: 10px;
-    overflow: hidden;
-    color: white;
-    cursor: pointer;
-    width: 100%;
-}
-
-.close{
-    position: absolute;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-weight: 600;
-    font-size: 2rem;
-    left: 90%; 
-    top: 0;
-    cursor: pointer;
+    border: 2px solid rgb(0, 0, 0, 0.6);
 }
 
 .hide{
@@ -441,9 +415,53 @@ input:focus{
     border-radius: 10px;
 }
 
+.folderLabel{
+    width: 100%;
+    text-align: left;
+    font-size: 1.3rem;
+    color: white;
+}
+
 .upperPart{
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: space-between;
+}
+
+.folderBtns{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.close{
+
+}
+
+.folderLine{
+    width: calc(100% + 40px);
+    height: 1px;
+    background-color: #0D121E;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+.submit, .close{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    background-color: #0D121E;
+    border: none;
+    color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 1rem;
+    overflow: hidden;
+    cursor: pointer;
+    font-weight: 400;
 }
