--- a/public/home.css
+++ b/public/home.css
@@ -232,7 +232,6 @@ input:focus{
 .button{
     cursor: pointer;
     width: 250px;
-    height: 100px;
     border-radius: 10px;
     border: 2px solid #1F2430;
     font-size: 1.2rem;
@@ -409,10 +408,25 @@ input:focus{
 
 .fileLabel{
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-color: transparent;
-    border: 1px dashed white;
+    border: 2px dashed #0D121E;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.fileLabel p {
+    color: #0D121E;
+}
+
+.uploadImage{
+    background-image: url("file-upload.png");
+    background-size: contain;
+    height: 60px;
+    width: 60px;
 }
 
 .folderLabel{
@@ -437,10 +451,6 @@ input:focus{
     gap: 10px;
 }
 
-.close{
-
-}
-
 .folderLine{
     width: calc(100% + 40px);
     height: 1px;
@@ -449,7 +459,7 @@ input:focus{
     margin-right: -20px;
 }
 
-.submit, .close{
+.submit, .closeStyle{
     text-decoration: none;
     display: flex;
     align-items: center;
