--- a/public/signup.css
+++ b/public/signup.css
@@ -6,18 +6,21 @@
 
 .container{
     gap: 10%;
+    background-color: #1F2430;
 }
 
 h1{
     font-weight: 600;
+    color: white;
 }
 
 p{
     font-weight: 500;
+    color: white;
 }
 
 a{
-    color: black;
+    color: white;
 }
 
 form{
@@ -38,10 +41,12 @@ input{
     width: 100%;
     border: none;
     outline: none;
-    background-color: #F7F7F7;
+    color: white;
+    background-color: #0D121E;
     padding: 20px;
     transition: .2s;
     font-size: 1rem;
+    border: 1px solid transparent;
 }
 
 form, .welcomeHeader{
@@ -55,8 +60,7 @@ form, .welcomeHeader{
 }
 
 input:focus{
-    border: 1px solid black;
-    background-color: transparent;
+    border: 1px solid white;
 }
 
 .passwordInput{
@@ -73,6 +77,7 @@ input:focus{
     left: 95%;
     transform: translate(-50%, -50%);
     cursor: pointer;
+    filter: brightness(0) invert(1);
 }
 
 .show{
@@ -81,6 +86,7 @@ input:focus{
 
 label{
     font-size: .9rem;
+    color: white;
 }
 
 .inputs{
@@ -91,7 +97,7 @@ label{
 
 .submitBtn {
     height: 40px;
-    background-color: #222222;
+    background-color: #0D121E;
     border: none;
     overflow: hidden;
     color: white;
